fix typo in man page
git-svn-id: svn://svn.code.sf.net/p/iperf/code/trunk@82 af0bf6fc-f334-0410-8907-b0502ba04a12

--- a/man/iperf.1
+++ b/man/iperf.1
@@ -140,7 +140,7 @@ Exit statuses are inconsistent.
 The threading implementation is rather heinous.
 .SH AUTHORS
 Iperf was originally written by Mark Gates and Alex Warshavsky.
-Man page and maintence by Jon Dugan <jdugan at x1024 dot net>.
+Man page and maintenance by Jon Dugan <jdugan at x1024 dot net>.
 Other contributions from Ajay Tirumala, Jim Ferguson,
 Feng Qin,
 Kevin Gibbs,
